@@ -9,6 +9,9 @@ libdebian-installer (0.17.cvs) UNRELEASED; urgency=low
     - use size_t in hash map and mem_chunk allocer (closes: #215448)
     - install documentation.
     - add -extra lib.
+  * Petter Reinholdtsen
+    - Define PATH_MAX if it is undefined, to get this building on
+      GNU/Hurd.  Patch from Santiago Vila. (Closes: #219464)
 
  -- Bastian Blank <waldi@debian.org>  Thu, 06 Nov 2003 08:46:53 +0100
 
